# pdfsum

./: CMakeLists.txt  DocumentMarkerGui.ui  ExportDialog.ui  MainDialog.ui  README.md  autocut.cpp  autocut.h  autocutdialog.ui  automarker.cpp  automarker.h  automarkthread.cpp  automarkthread.h  document_units.h  documentmarkergui.cpp  documentmarkergui.h  documentpage.cpp  documentpage.h  documentsettings.cpp  documentsettings.h  latexexportdialog.cpp  latexexportdialog.h  latexrunner.cpp  latexrunner.h  main.cpp  maindialog.cpp  maindialog.h  pdfmarker.cpp  pdfmarker.h  pdfmarkeritem.cpp  pdfmarkeritem.h  pdfview.cpp  pdfview.h  prerenderthread.cpp  prerenderthread.h  summarizedocument.cpp  summarizedocument.h
